# MultiplayerEdit

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  split_test.cpp
.github/: FUNDING.yml
.github/workflows/: build.yml
build-android32/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-android32/bindings/: Makefile  cmake_install.cmake
build-android32/bindings/bindings/Geode/binding/: AppDelegate.hpp  EditorPauseLayer.hpp  GJGameLevel.hpp  GJGameState.hpp  LevelSearchLayer.hpp  PlatformToolbox.hpp  PlayerObject.hpp
build-android32/bindings/bindings/Geode/modify/: AccountHelpLayer.hpp  AccountLoginLayer.hpp  AchievementBar.hpp  AchievementCell.hpp  AdToolbox.hpp  AdvancedFollowEditObject.hpp  AdvancedFollowTriggerObject.hpp  AnimatedGameObject.hpp  AnimatedShopKeeper.hpp  ArtTriggerGameObject.hpp  AudioLineGuideGameObject.hpp  BitmapFontCache.hpp  BoomListLayer.hpp  BoomListView.hpp  BoomScrollLayer.hpp  CCActionEase.hpp  CCActionInterval.hpp  CCActionManager.hpp  CCActionTween.hpp  CCAlertCircle.hpp  CCAnimateFrameCache.hpp  CCAnimatedSprite.hpp  CCAnimation.hpp  CCAnimationCache.hpp  CCArrayForObjectSorting.hpp  CCAtlasNode.hpp  CCAutoreleasePool.hpp  CCBMFontConfiguration.hpp  CCBezierBy.hpp  CCBezierTo.hpp  CCBlink.hpp  CCBlockLayer.hpp  CCCallFunc.hpp  CCCallFuncN.hpp  CCCallFuncND.hpp  CCCallFuncO.hpp  CCCatmullRomBy.hpp  CCClippingNode.hpp  CCContentLayer.hpp  CCControl.hpp  (+354 more)
build-android32/bindings/bindings/Geode/source/: AccountHelpLayer.cpp  AccountLoginLayer.cpp  AccountRegisterLayer.cpp  AchievementCell.cpp  AdvancedFollowTriggerObject.cpp  AudioEffectsLayer.cpp  BonusDropdown.cpp  BrowseSmartKeyLayer.cpp  CCAction.cpp  CCActionInstant.cpp  CCActionManager.cpp  CCAnimationCache.cpp  CCAtlasNode.cpp  CCAutoreleasePool.cpp  CCBlockLayer.cpp  CCCallFunc.cpp  CCCallFuncO.cpp  CCClippingNode.cpp  CCComponentContainer.cpp  CCConfiguration.cpp  CCControl.cpp  CCControlButton.cpp  CCControlHuePicker.cpp  CCControlSaturationBrightnessPicker.cpp  CCDictElement.cpp  CCDictionary.cpp  CCEGLView.cpp  CCEaseRateAction.cpp  CCFileUtilsAndroid.cpp  CCFollow.cpp  CCGLProgram.cpp  CCGridBase.cpp  CCIMEDispatcher.cpp  CCImage.cpp  CCKeyboardDispatcher.cpp  CCKeyboardHandler.cpp  CCLabelTTF.cpp  CCLayerRGBA.cpp  CCLightFlash.cpp  CCMenuItem.cpp  (+170 more)
build-android32/geode/: Makefile  cmake_install.cmake
build-android64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  what.txt
build-android64/bindings/: Makefile  cmake_install.cmake
build-android64/bindings/bindings/Geode/binding/: GJBaseGameLayer.hpp  GJOptionsLayer.hpp  PlayerCheckpoint.hpp  TriggerEffectDelegate.hpp
build-android64/bindings/bindings/Geode/modify/: AccountLayer.hpp  AccountRegisterLayer.hpp  AchievementManager.hpp  AchievementNotifier.hpp  AchievementsLayer.hpp  AppDelegate.hpp  ArtistCell.hpp  AudioAssetsBrowser.hpp  AudioEffectsLayer.hpp  BonusDropdown.hpp  BrowseSmartKeyLayer.hpp  BrowseSmartTemplateLayer.hpp  ButtonPage.hpp  ButtonSprite.hpp  CCAccelAmplitude.hpp  CCAccelDeccelAmplitude.hpp  CCAction.hpp  CCActionCamera.hpp  CCActionInstant.hpp  CCAnimate.hpp  CCAnimationFrame.hpp  CCApplication.hpp  CCArray.hpp  CCCamera.hpp  CCCardinalSplineBy.hpp  CCCardinalSplineTo.hpp  CCCatmullRomTo.hpp  CCCircleAlert.hpp  CCCircleWave.hpp  CCComponent.hpp  CCComponentContainer.hpp  CCConfiguration.hpp  CCContentManager.hpp  CCControlButton.hpp  CCControlHuePicker.hpp  CCControlSaturationBrightnessPicker.hpp  CCControlSlider.hpp  CCControlStepper.hpp  CCDeccelAmplitude.hpp  CCDelayTime.hpp  (+371 more)
build-android64/bindings/bindings/Geode/source/: AccountLayer.cpp  (+208 more)
build-android64/bindings/codegen/: Codegen
build-android64/geode/: Makefile  cmake_install.cmake
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  d050.multiplayeredit.lib  what.txt  winsdk_vfs_overlay.yaml  xXoanon.multiplayer-edit.lib
build-win/bindings/: Makefile  cmake_install.cmake
build-win/bindings/bindings/Geode/: GeneratedModify.hpp
build-win/geode/: Makefile  cmake_install.cmake
build-win/winsdk_lib_symlinks/: aclui.lib  activeds.lib  adsiid.lib  advapi32.lib  advpack.lib  ahadmin.lib  amsi.lib  amstrmid.lib  appmgmts.lib  appmgr.lib  appnotify.lib  audiobaseprocessingobject.lib  audiobaseprocessingobjectv140.lib  audioeng.lib  audiomediatypecrt.lib  authz.lib  aux_ulib.lib  avifil32.lib  avrt.lib  basesrv.lib  bcp47mrm.lib  bcrypt.lib  bindlink.lib  bits.lib  bluetoothapis.lib  bthprops.lib  bufferoverflow.lib  bufferoverflowu.lib  cabinet.lib  certadm.lib  certca.lib  certcli.lib  certidl.lib  certpoleng.lib  cfgmgr32.lib  chakrart.lib  cimfs.lib  cldapi.lib  clfsw32.lib  clusapi.lib  (+441 more)
proxy-server/: README.md  package.json  proxy.js
server/: README.md  package-lock.json  package.json  server.js
src/: ActionSerializer.cpp  ActionSerializer.hpp  EditorHooks.cpp  NetworkManager.cpp  NetworkManager.hpp  RemoteActionHandler.cpp  RemoteActionHandler.hpp  SessionManager.cpp  SessionManager.hpp  main.cpp
src/ui/: CursorNode.cpp  CursorNode.hpp  MultiplayerPopup.cpp  MultiplayerPopup.hpp  PlayerListNode.cpp  PlayerListNode.hpp  SessionStatusNode.cpp  SessionStatusNode.hpp
(+7 files in other folders)
